resolvendo problema de overflow no header

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,144 +1,141 @@
 header {
-    /* margin-bottom: 6rem; */
-    width: 100%;
-    background-color: var(--cor-terciaria);
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 12px;
-    box-sizing: border-box;
+  /* margin-bottom: 6rem; */
+  width: 100%;
+  background-color: var(--cor-terciaria);
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px 12px;
+  box-sizing: border-box;
 }
 
 header nav {
-    max-width: 1640px;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    box-sizing: border-box;
-    margin: 0 auto;
+  max-width: 1640px;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .img-logo {
-    max-width: 300px;
-    width: 100%;
+  max-width: 300px;
+  width: 100%;
 }
 
 li a.menu-links {
-    color: var(--cor-secundaria);
-    font-weight: 600;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 1.6rem;
-    z-index: 20;
+  color: var(--cor-secundaria);
+  font-weight: 600;
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 1.6rem;
+  z-index: 20;
 }
 
 li a.menu-links:hover {
-    opacity: 0.8;
-    transition: 0.3s;
+  opacity: 0.8;
+  transition: 0.3s;
 }
 
-
 .nav-list {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 .nav-list li {
-    margin-left: 3.2rem;
-    font-size: 1rem;
+  margin-left: 3.2rem;
+  font-size: 1rem;
 }
 
 .mobile-menu {
-    display: none;
-    cursor: pointer;
+  display: none;
+  cursor: pointer;
 }
 
 .mobile-menu div {
-    width: 3.2rem;
-    height: 0.2rem;
-    margin: 0.8rem;
-    transition: 0.3s;
-    background-color: var(--cor-secundaria);
+  width: 3.2rem;
+  height: 0.2rem;
+  margin: 0.8rem;
+  transition: 0.3s;
+  background-color: var(--cor-secundaria);
 }
 
 @media screen and (max-width: 999px) {
-    body {
-        overflow-x: hidden;
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-list {
+    position: absolute;
+    top: 159px;
+    right: 0;
+    height: calc(100vh - 85px);
+    width: 50vw;
+    background: var(--cor-terciaria);
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    display: flex;
+    /* transform: translateX(100%); */
+    opacity: 0;
+    visibility: hidden;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  }
+
+  .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
     }
 
-
-    .nav-list {
-        position: absolute;
-        top: 159px;
-        right: 0;
-        height: calc(100vh - 85px);
-        width: 50vw;
-        background: var(--cor-terciaria);
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        display: flex;
-        transform: translateX(100%);
-        opacity: 0;
-        visibility: hidden;
-        transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    to {
+      opacity: 1;
+      transform: translateX(0px);
     }
-
-    .nav-list li {
-        margin-left: 0;
-        opacity: 0;
-    }
-
-    .mobile-menu {
-        display: block;
-    }
-
-    @keyframes navLinkFade {
-        from {
-            opacity: 0;
-            transform: translateX(50px);
-        }
-
-        to {
-            opacity: 1;
-            transform: translateX(0px);
-        }
-    }
+  }
 }
 
 .nav-list.active {
-    transform: translateX(0);
-    visibility: visible;
-    opacity: 1;
-    z-index: 10;
+  transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
+  z-index: 10;
 }
 
 .nav-list.active li {
-    animation: navLinkFade 0.4s ease-in forwards;
+  animation: navLinkFade 0.4s ease-in forwards;
 }
 
 .mobile-menu.active .line1 {
-    transform: rotate(-45deg) translate(-8px, 8px);
+  transform: rotate(-45deg) translate(-8px, 8px);
 }
 
 .mobile-menu.active .line2 {
-    opacity: 0;
+  opacity: 0;
 }
 
 .mobile-menu.active .line3 {
-    transform: rotate(45deg) translate(-5px, -7px);
+  transform: rotate(45deg) translate(-5px, -7px);
 }
 
 /* Smartphone Geral */
-@media screen and (min-width:320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .img-logo {
+    max-width: 200px;
+    width: 100%;
+  }
 
-    .img-logo {
-        max-width: 200px;
-        width: 100%;
-    }
-
-    .menu-links {
-        font-size: 1.4rem;
-    }
+  .menu-links {
+    font-size: 1.4rem;
+  }
 }
