--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 :root {
-    font-size: 62.5%;
-    --font: 'Inria Sans', sans-serif;
+  font-size: 62.5%;
+  --font: "Inria Sans", sans-serif;
 
-    --cor-primaria: #252525;
-    --cor-primaria-claro: #979797be;
-    --cor-primaria-opacidade: #252525bd;
+  --cor-primaria: #252525;
+  --cor-primaria-claro: #979797be;
+  --cor-primaria-opacidade: #252525bd;
 
-    --cor-secundaria: #FFFFFF;
-    --cor-secundaria-escuro: #eeeeee;
-    --cor-secundaria-escuro-hover: #e9fcff;
+  --cor-secundaria: #ffffff;
+  --cor-secundaria-escuro: #eeeeee;
+  --cor-secundaria-escuro-hover: #e9fcff;
 
-    --cor-terciaria: #2687a5;
-    --cor-terciaria-escuro: #0F343F;
-    --cor-terciaria-claro: #4cc2e6;
+  --cor-terciaria: #2687a5;
+  --cor-terciaria-escuro: #0f343f;
+  --cor-terciaria-claro: #4cc2e6;
 
-    --cor-destaque: #daa520;
+  --cor-destaque: #daa520;
 }
 
 .uppercase {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 html,
@@ -104,12 +104,12 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 1.6rem;
-    vertical-align: baseline;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 1.6rem;
+  vertical-align: baseline;
+  text-decoration: none;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -124,38 +124,38 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
-    font-family: var(--font);
+  line-height: 1;
+  font-family: var(--font);
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: "";
-    content: none;
+  content: "";
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 button {
-    border: none;
-    cursor: pointer;
+  border: none;
+  cursor: pointer;
 }
